added HTML UI and search
